# Generated by Django 5.2.4 on 2026-04-07 23:49

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Resource",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("created_by", models.CharField(blank=True, max_length=255, null=True)),
                ("updated_by", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "created_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "modified_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                ("title", models.CharField(max_length=255)),
                ("file_path", models.CharField(max_length=255)),
                ("category", models.CharField(max_length=255)),
            ],
            options={
                "abstract": False,
            },
        ),
    ]
