# Generated by Django 5.2.4 on 2026-04-07 23:49

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("careers", "0001_initial"),
        ("profiles", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="Skill",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("created_by", models.CharField(blank=True, max_length=255, null=True)),
                ("updated_by", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "created_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "modified_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                ("name", models.CharField(max_length=255)),
                (
                    "category",
                    models.CharField(
                        choices=[("Technical", "Technical"), ("Soft", "Soft")],
                        max_length=50,
                    ),
                ),
            ],
            options={
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="Certification",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("created_by", models.CharField(blank=True, max_length=255, null=True)),
                ("updated_by", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "created_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "modified_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                ("name", models.CharField(max_length=255)),
                ("provider", models.CharField(max_length=255)),
                (
                    "target_cluster",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="certifications",
                        to="careers.careercluster",
                    ),
                ),
            ],
            options={
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="StudentCertification",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("created_by", models.CharField(blank=True, max_length=255, null=True)),
                ("updated_by", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "created_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "modified_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[("Planning", "Planning"), ("Completed", "Completed")],
                        default="Planning",
                        max_length=50,
                    ),
                ),
                ("completion_date", models.DateField(blank=True, null=True)),
                (
                    "cert",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="students_with_cert",
                        to="skills.certification",
                    ),
                ),
                (
                    "student",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="student_certifications",
                        to="profiles.student",
                    ),
                ),
            ],
            options={
                "unique_together": {("student", "cert")},
            },
        ),
        migrations.CreateModel(
            name="StudentSkill",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("created_by", models.CharField(blank=True, max_length=255, null=True)),
                ("updated_by", models.CharField(blank=True, max_length=255, null=True)),
                (
                    "created_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "modified_from_ip",
                    models.GenericIPAddressField(blank=True, null=True),
                ),
                (
                    "proficiency_level",
                    models.IntegerField(
                        choices=[(1, 1), (2, 2), (3, 3), (4, 4), (5, 5)]
                    ),
                ),
                (
                    "skill",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="students_with_skill",
                        to="skills.skill",
                    ),
                ),
                (
                    "student",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="student_skills",
                        to="profiles.student",
                    ),
                ),
            ],
            options={
                "unique_together": {("student", "skill")},
            },
        ),
    ]
